Narrowed sides styling

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('pics/ai-generated-7813439.jpg') no-repeat;
-    background-size: cover;
+    background: url('pics/blood-6253191.jpg') no-repeat;
+    background-size: 2812px 3750px;
     background-position: center;
 
 }
