--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('pics/ai-generated-7813439.jpg') no-repeat;
+    background: url('pics/blood-6253191.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 
