--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,13 @@ header {
     color: #9f45cd;
 
 }
+
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+}
