--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,9 @@ header {
     width: 130px;
     height: 50px;
     background: transparent;
-    border: 2px solid #752121fa;
+    border: 2px solid #cc1f1ffa;
     outline: none;
-    border-radius: 6px;
+    border-radius: 1px;
     cursor: pointer;
     font-size: 1.1em;
     color: #fffffffa;
@@ -113,6 +113,71 @@ header {
     height: 440px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
-    border-radius: 20px;
+    /* border-radius: 20px; */
     backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper .form-box {
+    width: 100%;
+    padding: 40px;
+}
+
+.form-box h2 {
+    font-size: 2em;
+    color: #162938;
+    text-align: center;
+
+}
+
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin: 30px 0;
+
+}
+
+.input-box label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #162938;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label {
+    top: -5px;
+
+
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    color: #162938;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+
+}
+
+.input-box .icon {
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: #162938;
+    line-height: 57px;
 }
