--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ header {
 
 .form-box h2 {
     font-size: 2em;
-    color: #162938;
+    color: #fffffffa;
     text-align: center;
 
 }
@@ -137,7 +137,7 @@ header {
     position: relative;
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid #162938;
+    border-bottom: 2px solid #cc1f1ffa;
     margin: 30px 0;
 
 }
@@ -148,7 +148,7 @@ header {
     left: 5px;
     transform: translateY(-50%);
     font-size: 1em;
-    color: #162938;
+    color: #fffffffa;
     font-weight: 500;
     pointer-events: none;
     transition: .5s;
@@ -168,7 +168,7 @@ header {
     border: none;
     outline: none;
     font-size: 1em;
-    color: #162938;
+    color: #fffffffa;
     font-weight: 600;
     padding: 0 35px 0 5px;
 
@@ -178,6 +178,46 @@ header {
     position: absolute;
     right: 8px;
     font-size: 1.2em;
-    color: #162938;
+    color: #fffffffa;
     line-height: 57px;
+}
+
+.remember-forget {
+    font-size: .9em;
+    color: #fffffffa;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.remember-forget label input {
+    accent-color: #cc1f1ffa;
+    margin-right: 3px;
+
+}
+
+.remember-forget a {
+    color: #fffffffa;
+    text-decoration: none;
+}
+
+.remember-forget a:hover {
+    text-decoration: underline;
+
+}
+
+.btn {
+    width: 100%;
+    height: 45px;
+    background: #cc1f1ffa;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+    
 }
