--- a/styles.css
+++ b/styles.css
@@ -113,13 +113,23 @@ header {
     height: 440px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
-    /* border-radius: 20px; */
+    border-radius: 10px;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
     align-items: center;
-    /* overflow: hidden; */
+    overflow: hidden;
+    transform: scale(0);
+    transition: transform .5s ease, height .2s ease;
+}
+
+.wrapper.active-popup {
+    transform: scale(1);
+}
+
+.wrapper.active {
+    height: 520px;
 }
 
 .wrapper .form-box {
@@ -128,12 +138,24 @@ header {
 }
 
 .wrapper .form-box.login {
-    /* display: none; */
+    transition: transform .18s ease;
+    transform: translateX(0)
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
 }
 
 .wrapper .form-box.register {
     position: absolute;
+    transition: none;
     transform: translateX(400px);
+}
+
+.wrapper.active .form-box.register {
+    transition: transform .18s ease;
+    transform: translateX(0);
 }
 
 .wrapper .icon-close {
@@ -148,11 +170,10 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     border-bottom-left-radius: 20px;
     cursor: pointer;
     z-index: 1;
-
 }
 
 .form-box h2 {
